# EggBot

./: .env.docker  .gitignore  DEVELOPMENT_SETUP.md  Dockerfile.pi-native  Dockerfile.pigpiod  PI_NATIVE_ARCHITECTURE.md  README.md  README_PI_NATIVE.md  debug_i2c_container.py  debug_thermistor.py  docker-compose.dev-nobluetooth.yml  docker-compose.dev.override.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.pi-native.yml  docker-compose.yml  setup-pi.sh  setup_pi_environment.sh  setup_pi_i2c.sh  setup_pigpio.md  simple_race_test.py  test_hardware_integration.py  test_pi_native_imports.py  test_pid_system.py  test_race_condition.py  test_servo.py  test_thermistor_i2c.py
.claude/agents/: raspberry-pi-docker-deployer.md
.github/workflows/: deploy.yml
api/: .env  Dockerfile  pyproject.toml  requirements.txt
api/app/: bluetooth_scanner.py  config.py  dependencies.py  logging_config.py  main.py  meater_manager.py  meater_probe.py  models.py  pi_native_io.py  serial_io.py  serial_io.py.bak
api/app/models/: schemas.py
api/app/routers/: controller.py  meater.py  pi_native.py  presets.py  telemetry.py
api/pid_presets/: test1.json  test2.json  test3.json
arduino/: .clang-format  .clangd  .editorconfig  README.md  format_code.sh  install_libraries.py  serial_io_arduino_notes.md
arduino/eggbot_controller/: config.h  eggbot_controller.ino  pid_controller.cpp  pid_controller.h  thermistor.cpp  (+1 more)
pi_native/: requirements-pi.txt  requirements.txt
ui/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+26 files in other folders)
