[tool.poetry]
name = "eggbot-api"
version = "2.0.0"
description = "Pi-Native Backend API for the Big Green Egg controller"
authors = ["Jordan Ellis <jordanmellis16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = { extras= ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.7"
black = "^23.7"
mypy = "^1.5.0"
flake8 = "^6.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
